<resources>
    <string name="app_name">MoonBet</string>
    <string name="home_win">Home Win</string>
    <string name="draw">Draw</string>
    <string name="away_win">Away Win</string>
    <string name="home_bet">Home Bet</string>
    <string name="draw_bet">Draw Bet</string>
    <string name="away_bet">Away Bet</string>
    <string name="bookie_take_percent">Bookie Take % :</string>
    <string name="percent">%</string>
    <string name="calculate">Calculate</string>
    <string name="amount">Amount</string>
    <string name="app">Final Amount :</string>
    <string name="accumulator">Bet Amount (100,000) = 1,000 :</string>
    <string name="two_thousand">1200</string>
    <string name="basket">BasketBall Calculator</string>
</resources>